[package]
name = "vegas-lattice"
version = "0.4.0"
authors = ["Oscar David Arbeláez Echeverri <odarbelaeze@gmail.com>"]
description = "CLI and library to work with lattices"
documentation = "https://github.com/odarbelaeze/vegas-lattice-rs/wiki"
homepage = "https://github.com/odarbelaeze/vegas-lattice-rs/wiki"
repository = "https://github.com/odarbelaeze/vegas-lattice-rs"
readme = "README.md"
keywords = ["lattice", "graph", "crystall", "materials"]
categories = ["command-line-utilities", "science", "simulation"]
license-file = "LICENSE.txt"

[badges]
travis-ci = { repository = "odarbelaeze/vegas-lattice-rs", branch = "master" }
is-it-maintained-issue-resolution = { repository = "odarbelaeze/vegas-lattice-rs" }
is-it-maintained-open-issues = { repository = "odarbelaeze/vegas-lattice-rs" }
maintenance = { status = "actively-developed" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
docopt = "0.8"
image = "0.15"
rand = "0.3"
