[package]
name = "vegas-lattice"
version = "0.5.0"
authors = ["Oscar David Arbeláez Echeverri <oscar@arbelaez.dev>"]
description = "CLI and library to work with lattices"
documentation = "https://docs.rs/vegas-lattice"
homepage = "https://github.com/odarbelaeze/vegas-lattice-rs"
repository = "https://github.com/odarbelaeze/vegas-lattice-rs"
readme = "README.md"
keywords = ["lattice", "graph", "crystall", "materials"]
categories = ["command-line-utilities", "science", "simulation"]
license-file = "LICENSE.txt"

[badges]
is-it-maintained-issue-resolution = { repository = "odarbelaeze/vegas-lattice-rs" }
is-it-maintained-open-issues = { repository = "odarbelaeze/vegas-lattice-rs" }
maintenance = { status = "actively-developed" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
docopt = "1.1"
image = "0.24"
rand = "0.8"
