[package]
name = "vegas-lattice"
version = "0.10.0"
authors = ["Oscar David Arbeláez Echeverri <oscar@arbelaez.dev>"]
description = "CLI and library to work with lattices"
documentation = "https://docs.rs/vegas-lattice"
homepage = "https://github.com/odarbelaeze/vegas-lattice-rs"
repository = "https://github.com/odarbelaeze/vegas-lattice-rs"
readme = "README.md"
keywords = ["lattice", "graph", "crystall", "materials"]
categories = ["command-line-utilities", "science", "simulation"]
license-file = "LICENSE.txt"
edition = "2021"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
image = "0.25"
rand = "0.9"
clap = { version = "4.5", features = ["cargo", "derive"] }
thiserror = "1.0"
